<?xml version="1.0"?>
<package format="2">
  <name>visualize_euler</name>
  <version>0.0.0</version>
  <description>Dynamic reconfigurator to visualize euler angles</description>
  <maintainer email="prsiddharthan92@gmail.com">Siddharthan</maintainer>
  <license>Bossa Nova Robotics Proprietary</license>
  <author email="prsiddharthan92@gmail.com">Siddharthan</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>sensor_msgs</depend>
</package>
